update HtmlTemplate